20-router.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p-router
  namespace: sesame
spec:
  selector:
    matchLabels:
      app: p-router
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: p-router
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      containers:
        - name: p-router
          image: docker.io/0x61c88647/poseidon-router:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
          resources:
            requests:
              memory: 64Mi
              cpu: 60m
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
      securityContext:
        fsGroup: 1000
      serviceAccountName: p-router   
---
apiVersion: v1
kind: Service
metadata:
  name: p-router
  namespace: sesame
spec:
  selector:
    app: p-router
  ports:
    - name: default
      port: 80
      targetPort: http
      protocol: TCP
      name: default
