21-router-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: p-router
  namespace: sesame
spec:
  rules:
    - host: internal-dev.se-same.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: p-router
                port:
                  number: 80
